design & layout bug fixes

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,2 +1,2 @@
 .layout {
-  background: url(../../../static/images/bg.svg) var(--color-prussian) top center; }
+  background: url(../images/bg.svg) var(--color-prussian) top center repeat; }
