--- a/src/css/utilities/overflow.css
+++ b/src/css/utilities/overflow.css
@@ -14,7 +14,7 @@
     padding-left: 7.5998263889%; } /* 1 col + 2 gutter */
 
   @screen xxxl {
-    padding-left: 14.2708333333%; } }
+    padding-left: calc(17.5% - 24px); } } /* 2 col (68px * 2) + 3 gutter (48 * 3) + 1 margin (56) */
 
 .snap-start {
   scroll-snap-align: start; }
